--- a/app/src/main/res/layout/fragment_top.xml
+++ b/app/src/main/res/layout/fragment_top.xml
@@ -3,59 +3,81 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".screens.TopFragment">
 
-    <RelativeLayout
-        android:id="@+id/top_layout"
-        android:layout_height="0dp"
-        android:layout_width="0dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_above="@id/buttons_layout"
-        >
-        <androidx.appcompat.widget.AppCompatImageView
+<!--    <RelativeLayout-->
+<!--        android:id="@+id/top_layout"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="0dp"-->
+<!--        android:layout_above="@id/buttons_layout"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_alignParentTop="true"-->
+<!--        android:layout_alignParentEnd="true">-->
+
+<!--        <androidx.appcompat.widget.AppCompatImageView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_centerInParent="true"-->
+<!--            android:src="@drawable/first_aid" />-->
+<!--    </RelativeLayout>-->
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/buttons_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_horizontal|bottom"
+        android:orientation="vertical"
+        android:paddingHorizontal="20dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="100dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_so_cuu"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:background="@drawable/rounded_button"
+                android:padding="20dp"
+                android:text="@string/label_so_cap_cuu"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:src="@drawable/first_aid" />
-    </RelativeLayout>
+            android:layout_marginTop="40dp"
+            app:showDividers="middle"
+            app:divider="@drawable/vertical_divider"
+            android:orientation="horizontal">
 
-    <LinearLayout
-        android:id="@+id/buttons_layout"
-        android:orientation="vertical"
-        android:layout_alignParentBottom="true"
-        android:paddingTop="10dp"
-        android:paddingHorizontal="20dp"
-        android:paddingBottom="100dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <androidx.appcompat.widget.AppCompatButton
-            android:text="SƠ CỨU"
-            android:id="@+id/btn_so_cuu"
-            android:background="#ff8888"
-            android:layout_marginTop="10dp"
-            android:padding="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_tin_hieu"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#88ffff"
+                android:padding="20dp"
+                android:text="@string/label_so_cap_cuu" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:text="TÍN HIỆU"
-            android:id="@+id/btn_tin_hieu"
-            android:background="#88ffff"
-            android:layout_marginTop="10dp"
-            android:padding="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_khoa_hoc"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#88ff88"
+                android:padding="20dp"
+                android:text="TÀI LIỆU" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:text="TÀI LIỆU"
-            android:id="@+id/btn_khoa_hoc"
-            android:background="#88ff88"
-            android:layout_marginTop="10dp"
-            android:padding="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 </RelativeLayout>
