--- a/app/src/main/res/layout/fragment_evaluate_problem.xml
+++ b/app/src/main/res/layout/fragment_evaluate_problem.xml
@@ -34,16 +34,10 @@
         >
 
         <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/linear_option"
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:layout_height="wrap_content">
-
-            <ToggleButton
-                style="@style/MessageToggleButtonStyle"
-                android:textOn="MY-ON"
-                android:textOff="MY-OFF"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.core.widget.NestedScrollView>
