--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,8 +11,9 @@
         <!-- Các thuộc tính khác của theme -->
     </style>
 
-    <style name="MessageToggleButtonStyle" parent="android:Widget.Button.Toggle">
-        <item name="android:background">@drawable/message_toggle_button</item>
+    <style name="Widget.Theme.FirstAid.ButtonBar.Fullscreen" parent="">
+        <item name="android:background">@color/ghost_white</item>
+        <item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>
     </style>
 
 </resources>
