--- a/app/src/main/res/layout/layout_image_text.xml
+++ b/app/src/main/res/layout/layout_image_text.xml
@@ -5,7 +5,7 @@ android:layout_width="match_parent"
 android:orientation="horizontal"
 android:layout_height="wrap_content">
 
-<androidx.appcompat.widget.AppCompatImageView
+<com.google.android.material.imageview.ShapeableImageView
     android:id="@+id/image"
     android:layout_width="80dp"
     android:scaleType="fitXY"
@@ -14,7 +14,7 @@ android:layout_height="wrap_content">
 
 <androidx.appcompat.widget.AppCompatTextView
     android:id="@+id/text"
-    android:background="@color/white"
+    android:textColor="@color/black"
     android:layout_marginLeft="10dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
