--- a/app/src/main/res/layout/fragment_treatment_guide.xml
+++ b/app/src/main/res/layout/fragment_treatment_guide.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/teal_200"
-    tools:context=".screens.TreatmentGuideFragment">
+    tools:context=".screens.GuideFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
