--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,17 @@
     <color name="light_blue_600">#FF039BE5</color>
     <color name="gray_400">#FFBDBDBD</color>
     <color name="gray_600">#FF757575</color>
+    <color name="light_blue_900">#FF01579B</color>
+    <color name="light_blue_A200">#FF40C4FF</color>
+    <color name="light_blue_A400">#FF00B0FF</color>
+    <color name="black_overlay">#66000000</color>
+
+    <color name="ghost_white">#FFFAFAFE</color>
+    <color name="mongolia">#FFEFF0FC</color>
+    <color name="lavender">#FFE6E9FF</color>
+    <color name="periwinkle">#FFD2D8FF</color>
+    <color name="powder_blue">#FFAAB5FF</color>
+    <color name="glaucous">#FF69719F</color>
+    <color name="glaucous_overlay">#6669719F</color>
+    <color name="white_overlay">#66FFFFFF</color>
 </resources>
