--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,9 @@
         <item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>
     </style>
 
+    <style name="SettingSwitchStyle" parent="">
+        <item name="android:thumbTint">@color/glaucous</item>
+        <item name="android:trackTint">@color/powder_blue</item>
+    </style>
+
 </resources>
