Added fragement dangerlevel and enviroment_evaluation and changes to guide fragment with step layout

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,7 +37,8 @@
             android:layout_height="wrap_content"
             android:src="@drawable/center_button"
             android:background="@android:color/transparent"
-            android:backgroundTint="@android:color/transparent" />
+            android:backgroundTint="@android:color/transparent"
+            android:contentDescription = "ÊM"/>
 
 
     </FrameLayout>
