--- a/app/src/main/res/layout/layout_step_image.xml
+++ b/app/src/main/res/layout/layout_step_image.xml
@@ -19,7 +19,8 @@
         style="@style/TextAppearance.MaterialComponents.Caption"
         android:textAlignment="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="25sp"/>
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
