--- a/app/src/main/res/layout/fragment_enviroment_evaluation.xml
+++ b/app/src/main/res/layout/fragment_enviroment_evaluation.xml
@@ -57,18 +57,7 @@
         android:layout_marginTop="255dp"
         android:paddingStart="30dp"
         android:paddingEnd="30dp"
-        android:text="Skip"
-        android:textAllCaps="false" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/detail_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="200dp"
-        android:paddingStart="30dp"
-        android:paddingEnd="30dp"
-        android:text="Chi tiết"
+        android:text="Next"
         android:textAllCaps="false" />
 
 </FrameLayout>
