--- a/app/src/main/res/layout/general_recycler_view.xml
+++ b/app/src/main/res/layout/general_recycler_view.xml
@@ -22,7 +22,7 @@
             android:layout_margin="8dp">
 
             <TextView
-                android:id="@+id/lessonNameText"
+                android:id="@+id/Name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Name"
@@ -33,14 +33,16 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/lessonDescText"
+                android:id="@+id/Desc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Desc"
+                android:textSize="15sp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/ghost_white"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/lessonNameText" />
+                app:layout_constraintTop_toBottomOf="@+id/Name"
+                android:visibility="visible"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
