Updated fuction of dangerlevelfragment

--- a/app/src/main/res/layout/fragment_dangerlevel_low_high.xml
+++ b/app/src/main/res/layout/fragment_dangerlevel_low_high.xml
@@ -17,14 +17,15 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="IMPORTANT THINGS TO REMEMBER"
+            android:text="placeholder"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="23sp"
+            android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="HardcodedText" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
