--- a/app/src/main/res/layout/fragment_treatment_guide.xml
+++ b/app/src/main/res/layout/fragment_treatment_guide.xml
@@ -6,10 +6,22 @@
     android:background="@color/teal_200"
     tools:context=".screens.GuideFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/title_tv"
+        android:textAlignment="center"
+        android:textSize="25sp"
+        android:textColor="#000"
+        android:textStyle="bold"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"/>
+
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/idViewPager"
+        android:layout_width="374dp"
+        android:layout_height="557dp"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:layout_margin="10dp" />
+
 
 </FrameLayout>
