--- a/app/src/main/res/layout/layout_step_image.xml
+++ b/app/src/main/res/layout/layout_step_image.xml
@@ -3,23 +3,9 @@
     android:orientation="vertical"
     android:padding="10dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/teal_200">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/text_title"
-        android:typeface="normal"
-        style="@style/TextAppearance.MaterialComponents.Headline6"
-        android:text="TITLE"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/text_body"
-        android:typeface="normal"
-        style="@style/TextAppearance.MaterialComponents.Body2"
-        android:text="TITLE"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/media"
@@ -32,9 +18,9 @@
         android:id="@+id/text_caption"
         style="@style/TextAppearance.MaterialComponents.Caption"
         android:textAlignment="center"
-        android:text="caption"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:textSize="25sp"/>
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
