--- a/app/src/main/res/layout/fragment_treatment_guide.xml
+++ b/app/src/main/res/layout/fragment_treatment_guide.xml
@@ -1,27 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_200"
+    android:background="@color/mongolia"
     tools:context=".screens.GuideFragment">
 
     <TextView
         android:id="@+id/title_tv"
-        android:textAlignment="center"
-        android:textSize="25sp"
-        android:textColor="#000"
-        android:textStyle="bold"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="placeholder"
+        android:textAlignment="center"
+        android:textColor="#000"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/idViewPager"
-        android:layout_width="374dp"
-        android:layout_height="557dp"
-        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
         android:layout_gravity="center"
-        android:layout_margin="10dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title_tv" />
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout"
+        app:tabBackground="@drawable/tab_selector"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/idViewPager"
+        app:tabGravity="center"
+        app:tabIndicatorHeight="0dp"
+        app:tabMaxWidth="30dp"
+        app:tabPaddingStart="15dp"/>
 
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
