--- a/app/src/main/res/layout/layout_step_image.xml
+++ b/app/src/main/res/layout/layout_step_image.xml
@@ -3,8 +3,7 @@
     android:orientation="vertical"
     android:padding="10dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/teal_200">
+    android:layout_height="match_parent">
 
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -12,7 +11,7 @@
         android:src="@mipmap/ic_launcher"
         android:layout_width="match_parent"
         android:adjustViewBounds="true"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/text_caption"
