--- a/app/src/main/res/layout/fragment_enviroment_evaluation.xml
+++ b/app/src/main/res/layout/fragment_enviroment_evaluation.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,45 +10,42 @@
     android:theme="@style/ThemeOverlay.FirstAid.FullscreenContainer"
     tools:context=".screens.EnvironmentEvaluateFragment">
 
-    <TextView
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:text="IMPORTANT THINGS TO REMEMBER"
-        android:textSize="20sp"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:layout_marginTop="30dp"/>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+        android:paddingHorizontal="30dp"
+        android:background="@color/lavender"
+        android:orientation="horizontal">
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:layout_gravity="center_vertical"
+            android:text="Sơ cứu cơ bản"
+            android:layout_height="40dp"/>
+        <androidx.appcompat.widget.AppCompatImageView
+            android:src="@drawable/down_arrow"
+            android:layout_weight="0"
+            android:layout_gravity="center"
+            android:layout_width="30dp"
+            android:layout_height="30dp"/>
+    </androidx.appcompat.widget.LinearLayoutCompat>
+    <net.cachapa.expandablelayout.ExpandableLayout
+        android:id="@+id/expandable_layout"
         android:layout_width="match_parent"
-        android:layout_height="515dp">
+        android:layout_height="wrap_content"
+        app:el_duration="1000"
+        app:el_expanded="true"
+        app:el_parallax="0.5">
 
-        <androidx.appcompat.widget.AppCompatTextView
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:autoSizeMaxTextSize="100sp"
-            android:autoSizeMinTextSize="23sp"
-            android:autoSizeStepGranularity="10sp"
-            android:autoSizeTextType="uniform"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:inputType="textMultiLine"
-            android:maxLines="5"
-            android:textColor="@color/black"
-            android:paddingStart="15dp"
-            android:paddingTop="10dp"
-            android:singleLine="false"
-            android:text="- Đánh giá hiện trường \n- Vỗ vào vai và gọi to \n- Gọi hỗ trợ và gọi 115 \n- Ấn trán, nâng cằm \n- Ghé tai vào miệng, cảm nhận hơi thở \n- KIểm tra mạch"
-            android:textAlignment="viewStart"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="-16dp" />
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:text="Fixed height" />
 
+    </net.cachapa.expandablelayout.ExpandableLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/skip_button"
@@ -60,4 +58,4 @@
         android:text="Next"
         android:textAllCaps="false" />
 
-</FrameLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
