--- a/app/src/main/res/layout/fragment_enviroment_evaluation.xml
+++ b/app/src/main/res/layout/fragment_enviroment_evaluation.xml
@@ -79,6 +79,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_gravity="center"
+        android:textColor="@color/gray_600"
         android:background="@color/CLEAR"
         android:layout_marginBottom="100dp"
         android:text="Tiếp theo"
