--- a/app/src/main/res/layout/fragment_enviroment_evaluation.xml
+++ b/app/src/main/res/layout/fragment_enviroment_evaluation.xml
@@ -20,7 +20,7 @@
             android:id="@+id/ex_button_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="30dp"
+            android:paddingHorizontal="15dp"
             android:background="@color/lavender"
             android:clickable="true"
             android:orientation="horizontal">
@@ -33,21 +33,22 @@
                 android:textColor="@color/gray_600"
                 android:clickable="false"
                 android:text="Sơ cứu cơ bản"
-                android:layout_height="40dp"/>
+                android:layout_height="48dp"/>
             <androidx.appcompat.widget.AppCompatImageView
                 android:src="@drawable/down_arrow"
+                android:alpha="0.5"
                 android:layout_weight="0"
                 android:layout_gravity="center"
                 android:clickable="false"
-                android:layout_width="30dp"
-                android:layout_height="30dp"/>
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
         <net.cachapa.expandablelayout.ExpandableLayout
             android:id="@+id/expandable_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="50dp"
-            app:el_duration="1000"
+            app:el_duration="400"
             app:el_expanded="true"
             app:el_parallax="0.5">
 
@@ -58,6 +59,57 @@
                 android:layout_height="wrap_content"/>
 
         </net.cachapa.expandablelayout.ExpandableLayout>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/ex_button_layout_2"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="15dp"
+            android:background="@color/lavender"
+            android:clickable="true"
+            android:orientation="horizontal">
+            <androidx.appcompat.widget.AppCompatButton
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:background="@color/CLEAR"
+                android:gravity="center_vertical"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/gray_600"
+                android:clickable="false"
+                android:text="Chọn loại chấn thương"
+                android:layout_height="48dp"/>
+            <androidx.appcompat.widget.AppCompatImageView
+                android:src="@drawable/down_arrow"
+                android:alpha="0.5"
+                android:layout_weight="0"
+                android:layout_gravity="center"
+                android:clickable="false"
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+        <net.cachapa.expandablelayout.ExpandableLayout
+            android:id="@+id/expandable_layout_2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="50dp"
+            app:el_duration="400"
+            app:el_expanded="true"
+            app:el_parallax="0.5">
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:orientation="vertical"
+                android:id="@+id/expandable_layout_content_2"
+                android:gravity="left"
+                android:layout_gravity="left"
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </net.cachapa.expandablelayout.ExpandableLayout>
+
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <androidx.appcompat.widget.AppCompatButton
@@ -69,20 +121,8 @@
         android:layout_marginHorizontal="50dp"
         android:textColor="@color/white"
         android:background="@drawable/blue_rounded_button"
-        android:layout_marginBottom="150dp"
-        android:text="Gọi 115"
-        android:textAllCaps="false" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/skip_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_gravity="center"
-        android:textColor="@color/gray_600"
-        android:background="@color/CLEAR"
         android:layout_marginBottom="100dp"
-        android:text="Tiếp theo"
+        android:text="Gọi 115"
         android:textAllCaps="false" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
