--- a/app/src/main/res/layout/fragment_header_list_footer.xml
+++ b/app/src/main/res/layout/fragment_header_list_footer.xml
@@ -4,23 +4,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp"
-    android:background="@color/white"
-    tools:context=".screens.EvaluateProblemFragment">
+
+    android:background="@color/mongolia">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/linear_header"
         android:layout_width="match_parent"
+        android:background="@color/mongolia"
         android:orientation="horizontal"
+        android:padding="10dp"
         android:layout_height="wrap_content"/>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:background="@color/mongolia"
         android:layout_weight="1">
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/linear_option"
             android:layout_width="match_parent"
+            android:padding="10dp"
             android:orientation="vertical"
             android:layout_height="wrap_content">
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -30,6 +33,8 @@
         android:id="@+id/linear_footer"
         android:layout_width="match_parent"
         android:orientation="horizontal"
+        android:padding="10dp"
+        android:background="@color/mongolia"
         android:layout_height="wrap_content"/>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
